--- a/Toupesu-2.0/src/app/shared/contribution-loan/contribution-loan.component.html
+++ b/Toupesu-2.0/src/app/shared/contribution-loan/contribution-loan.component.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="ion-text-center">{{'DEBT_MAKE_PAYMENT' | translate }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button slot="icon-only" (click)="closeContribute('cancel')">
+        <ion-icon color="warning" name="close-circle-outline" ></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
   <ion-toolbar class="ion-text-left">
     <ion-segment  (ionChange)="segmentChanged($event)" value="0">
@@ -10,7 +15,7 @@
 
       <ion-segment-button value="1">
         <ion-label class="ion-text-capitalize">{{ 'CASH_PAYMENT' | translate }}</ion-label>
-      </ion-segment-button> 
+      </ion-segment-button>
 
       <ion-segment-button value="2">
         <ion-label class="ion-text-capitalize">{{ 'BANK_TEXT' | translate }}</ion-label>
@@ -24,7 +29,7 @@
     <ion-row>
       <ion-col>
         <p class="ion-no-margin">
-          {{ 'MAKING_PAYMENT_TEXT' | translate }} <b>{{ tontineName }}</b>.         
+          {{ 'MAKING_PAYMENT_TEXT' | translate }} <b>{{ tontineName }}</b>.
         </p>
         <h4 class="ion-no-margin">
           <small>
@@ -39,27 +44,27 @@
         <div class="mobile" *ngIf="isModeSelected[0]">
           <app-paidmode-loan [amountPay]="amountPay" [type]="type" [balance]="balance"  ></app-paidmode-loan>
         </div>
-  
+
         <div class="bank" *ngIf="isModeSelected[1]">
           <app-cashmode-loan [amountPay]="amountPay" [type]="type" [balance]="balance"></app-cashmode-loan>
-        </div> 
+        </div>
 
         <div class="bank" *ngIf="isModeSelected[2]">
           <app-bankmode-loan [amountPay]="amountPay" [type]="type" [balance]="balance"></app-bankmode-loan>
         </div>
-     
+
       </ion-col>
     </ion-row>
-  </ion-grid> 
+  </ion-grid>
 </ion-content>
 
-<ion-footer class="ion-padding ion-text-center">
+<!-- <ion-footer class="ion-padding ion-text-center">
     <ion-grid>
       <ion-row>
         <ion-col>
-            <ion-button expand="full" 
+            <ion-button expand="full"
                   fill="outline"
-                  color="warning" 
+                  color="warning"
                   class="ion-text-uppercase"
                   shape="round" (click)="closeContribute('cancel')">
               {{ 'CANCEL_TEXT' | translate }}
@@ -67,4 +72,4 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-</ion-footer>
+</ion-footer> -->
