--- a/Toupesu-2.0/src/app/shared/countries/countries.component.html
+++ b/Toupesu-2.0/src/app/shared/countries/countries.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="end">
       <ion-button slot="icon-only" (click)="closeCountries()">
-        <ion-icon color="warning" name="close" ></ion-icon>
+        <ion-icon color="warning" name="close-circle-outline" ></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title class="ion-text-center subtitle">
